--- a/public/css/head.css
+++ b/public/css/head.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     border: none;
+    font-family: '微软雅黑';
 }
 a {
     text-decoration: none;
@@ -86,15 +87,23 @@ body {
 
 
 .head-me {
+    /*width: 300px;*/
     float: right;
     height: 50px;
     line-height: 50px;
-    margin-right: 30px;
+    margin-right: 20px;
 }
 .head-me ul li {
     list-style: none;
     float: left;
-    padding: 0 20px;
+    margin-right: 15px;
+}
+.head-me ul li:first-child {
+    /*width: 170.83px;*/
+}
+.head-me ul li:last-child {
+    float: right;
+    margin-right: 0;
 }
 .head-me ul li strong {
     color: #b9c1c7;
@@ -103,8 +112,106 @@ body {
     color: white;
     cursor: pointer;
 }
-.head-me ul li img {
+.head-me ul li:first-child img {
     height: 25px;
     margin-top: 13px;
     border-radius: 4px;
+}
+
+.head-me .menu {
+    position: absolute;
+    width: 100px;
+    background-color: #fff;
+    border-radius: 4px;
+    box-shadow: 0 1px 3px rgba(0,0,0,.2);
+    top: 52px;
+    left: -10px;
+    padding: 6px 0;
+    z-index: 500;
+}
+.head-me .arrow {
+    left: 42px;
+    top: -9px;
+    right: 85px;
+    width: 0;
+    height: 0;
+    border-left: 9px solid transparent;
+    border-right: 9px solid transparent;
+    border-bottom: 9px solid #fff;
+    position: absolute;
+    z-index: 1;
+}
+.head-me .menu a {
+    display: block;
+    height: 30px;
+    line-height: 30px;
+    font-size: 13px;
+    color: #525558;
+    padding-left: 10px;
+    letter-spacing: 1px;
+    outline: 0;
+    text-decoration: none;
+}
+
+.head-me .menu2 {
+    width: 280px;
+}
+.head-me .menu2 .arrow {
+    left: 130px;
+}
+
+.head-me .menu2 .nav_notify_tab {
+    width: 100%;
+    display: -moz-box;
+    display: -webkit-box;
+    display: box;
+    padding: 5px 0;
+    font-size: 12px;
+    color: #b9c1c7;
+}
+.head-me .menu2 .item{
+    display: block;
+    line-height: normal;
+    -moz-box-flex: 1;
+    -webkit-box-flex: 1;
+    box-flex: 1;
+    text-align: center;
+    font-size: 12px;
+    position: relative;
+    cursor: pointer;
+}
+
+.head-me .menu2 .on {
+    color: #0099e5;
+}
+
+.head-me .menu2 .nav_notify_list_out {
+    height: 300px;
+    overflow: auto;
+    position: relative;
+    margin-bottom: 5px;
+}
+
+.head-me .menu2 .loading {
+    margin-top: 10px;
+    overflow: hidden;
+}
+.head-me .menu2 .loading img {
+    margin-left: 130px;
+    height: 30px;
+}
+
+
+.head-me .menu2 .nav_notify_list {
+    padding: 10px 0;
+}
+
+.head-me .menu2 .nav_notify_list_tip {
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    left: 0;
+    top: 100px;
+    font-size: 14px;
+    color: #b9c1c7;
 }
