--- a/public/css/index.css
+++ b/public/css/index.css
@@ -58,6 +58,12 @@
     border-radius: 4px;
     box-shadow: 0 1px 1px 0 rgba(0,0,0,.1);
 }
+.write-article * {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
 .before-click {
     overflow: hidden;
 }
@@ -96,7 +102,7 @@
 }
 .in-textarea {
     background-color: #fff;
-    margin-top: -2px;
+    margin-top: -5px;
 }
 .in-textarea span:first-child {
     color: #999;
@@ -112,7 +118,7 @@
     padding-right: 10px;
 }
 .article-input {
-    height: 143px;
+    height: 210px;
     width: 100%;
     resize: none;
     padding: 10px 10px 10px 10px;
@@ -125,30 +131,65 @@
 .article-input-action .after-action0 {
     padding: 10px;
 }
-.article-input-action .after-action0 a{
+.article-input-action .after-action0 span{
     color: #777;
 }
-.article-input-action .after-action0 a:hover {
+.article-input-action .after-action0 span:hover {
     color: #34bf49;
+    cursor: pointer;
 }
 .after-image-show {
-    display: none;
     height: 300px;
     border: 1px solid red;
-    margin: 10px 10px 10px;
+    margin: 0px 10px 10px;
 }
 .after-footer {
-    padding: 5px 10px 15px 10px;
+    padding: 0 10px 10px 10px;
     overflow: hidden;
 }
 .after-drop {
     float: left;
 }
 .after-menu {
-    z-index: 10;
+    position: absolute;
+    width: 175px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    margin: 2px 0 0;
+    min-width: 160px;
+    text-align: left;
+    list-style: none;
+    border-radius: 4px;
+    font-size: 14px;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    box-shadow: 0 6px 12px rgba(0,0,0,.175);
+}
+.after-menu li {
+    border-bottom: 1px solid #dedede;
+    height: 28px;
+    line-height: 28px;
+    cursor: pointer;
+}
+.after-menu li span {
+    display: block;
+    height: 100%;
+    width: 100%;
+    padding-left: 10px;
+}
+.after-menu span:hover {
+    color: #fff;
+    background-color: #0d8ddb;
+}
+.after-menu li:first-child span{
+    border-radius: 4px 4px 0 0;
 }
 
-
+.after-menu li:last-child span{
+    border-radius: 0 0 4px 4px;
+    border: none;
+}
 
 .article {
     /*padding: 12px 13px 12px 13px;*/
