--- a/public/css/index.css
+++ b/public/css/index.css
@@ -230,6 +230,14 @@
     padding: 12px 13px 12px 13px;
 }
 
+.article-content-image {
+    margin-top: 5px;
+}
+
+.article-content-image img {
+    margin-top: 3px;
+}
+
 
 .article-footer {
     border-top: 1px solid #e9e9e9;
