--- a/public/css/index.css
+++ b/public/css/index.css
@@ -140,9 +140,16 @@
     cursor: pointer;
 }
 .after-image-show {
-    height: 300px;
     border: 1px solid red;
     margin: 0px 10px 10px;
+}
+#showImage div{
+    /*padding-left: 5px;*/
+    padding-bottom: 3px;
+}
+#showImage div img{
+    margin-top: 3px;
+    margin-left: 4px;
 }
 .after-footer {
     padding: 0 10px 10px 10px;
