--- a/public/css/index.css
+++ b/public/css/index.css
@@ -15,6 +15,7 @@
 
 .left {
     width: 7%;
+    min-height: 1px;
     float: left;
     margin-right: 1%;
 }
@@ -22,6 +23,7 @@
     background-color: white;
     border-radius: 4px;
     box-shadow: 0 1px 1px 0 rgba(0,0,0,.1);
+    position: fixed;
 }
 .left-kind ul li {
     list-style: none;
@@ -251,28 +253,33 @@
 .article-footer {
     border-top: 1px solid #e9e9e9;
     background-color: #f5f5f5;
+    /*background-color: #f5f5f5;*/
     margin: 3px 0 0 0;
     overflow: hidden;
+    border-radius:0 0 4px 4px;
+    box-shadow: 0 1px 1px 0 rgba(0,0,0,.1);
+    padding-bottom: 5px;
 }
 
 .article-action {
-    height: 25px;
+    height: 35px;
+    line-height: 35px;
 }
 .article-action ul li {
     list-style: none;
     float: left;
-    border-left: 1px dotted #dedede;
     color: #525558;
-}
-.article-action ul li:first-child {
-    border: none;
 }
 .article-action ul li span:hover {
     color: #34bf49;
     cursor: pointer;
 }
 .article-action ul li span {
-    margin: 0 30px;
+    padding: 0 30px;
+    border-left: 1px dotted #dedede;
+}
+.article-action ul li:first-child span{
+    border: none;
 }
 
 
@@ -328,36 +335,60 @@
     font-size: 14px;
 }
 
+.comment-item ul li span {
+    float: right;
+    display: none;
+    cursor: pointer;
+}
+.comment-item ul li span:hover {
+    color: #34bf49;
+}
+
 .comment-input {
     clear: both;
     margin: 5px 0 10px 10px;
+}
+.comment-input img {
+    height: 33px;
+    width: 33px;
+    border-radius: 4px;
+    float: left;
+    margin-left: 1px;
 }
 .input-show {
     display: block;
     border: 1px solid #dedede;
     border-radius: 4px;
     background-color: white;
-    height: 30px;
-    width: 97%;
+    height: 32px;
+    width: 93%;
     color: #b2b4b4;
     padding: 5px ;
+    float: left;
+    margin-left: 10px;
 }
 .input-show:hover {
     cursor: text;
 }
 
+.comment-input-detial {
+   float: left;
+    width: 93%;
+    margin-left: 10px;
+}
+
 .write {
     border: 1px solid #dedede;
-    width: 97%;
-    height: 80px;
+    width: 100%;
+    height: 100px;
     resize: none;
     padding: 10px;
     border-radius: 4px;
 }
 
 .f-bottom{
-    width: 97%;
-    margin-top: 10px;
+    /*width: 97%;*/
+    margin-top: 3px;
     overflow: hidden;
 }
 .submit {
@@ -385,6 +416,87 @@
     color: #fff;
 }
 
+/*文章*/
+.content-all {
+    background-color: #eee;
+    height: 1000px;
+}
+.content-list {
+    width: 100%;
+    max-width: 1270.37px;
+    padding-top: 15px;
+    margin: 0 auto;
+}
+
+
+.rz-item {
+    /*padding: 12px 13px 12px 13px;*/
+    width: 100%;
+    border-radius: 4px;
+    box-shadow: 0 1px 1px 0 rgba(0,0,0,.1);
+    background-color: white;
+    /*margin-bottom: 15px;*/
+}
+.rz-head {
+    padding: 12px 13px 12px 13px;
+}
+.rz-head img {
+    height: 50px;
+    width: 50px;
+    float: left;
+    border-radius: 4px;
+}
+.rz-head-name {
+    float: left;
+    list-style: none;
+    margin-left: 15px;
+}
+.rz-head-name li {
+    height: 25px;
+    line-height: 25px;
+}
+.rz-head-name li:last-child {
+    color: #b2b2b2;
+    font-size: 12px;
+}
+.rz-head-name li:last-child a {
+    font-size: 15px;
+}
+.rz-head-name .rz-tz:hover {
+    text-decoration: underline;
+    color: #0099e5;
+}
+
+.rz-content {
+    clear: both;
+    margin-left: 50px;
+    font-size: 15px;
+    color: #777;
+    padding: 12px 13px 5px 13px;
+}
+
+.rz-footer {
+    padding: 5px 13px 20px 50px;
+}
+.rz-footer ul li {
+    float: left;
+    list-style: none;
+    color: #b2b2b2;
+    padding: 0 10px;
+    border-right: 1px dotted #b2b2b2;
+    font-size: 13px;
+}
+
+.rz-footer ul li:last-child {
+    float: right;
+    border: none;
+}
+.rz-footer ul li:last-child a {
+    color: #b2b2b2;
+}
+.rz-footer ul li:last-child a:hover {
+    color: #34bf49;
+}
 
 
 .right {
