--- a/public/css/index.css
+++ b/public/css/index.css
@@ -208,7 +208,7 @@
     border-radius: 4px;
     box-shadow: 0 1px 1px 0 rgba(0,0,0,.1);
     background-color: white;
-    margin-bottom: 15px;
+    margin-bottom: 18px;
 }
 .article-head {
     padding: 12px 13px 12px 13px;
@@ -222,7 +222,7 @@
 .article-head-name {
     float: left;
     list-style: none;
-    margin-left: 25px;
+    margin-left: 15px;
 }
 .article-head-name li {
     height: 25px;
@@ -232,7 +232,9 @@
     color: #b2b2b2;
 }
 
-
+.content-all {
+    margin-bottom: 18px;
+}
 .article-content {
     clear: both;
     margin-left: 50px;
@@ -252,7 +254,7 @@
 
 .article-footer {
     border-top: 1px solid #e9e9e9;
-    background-color: #f5f5f5;
+    background-color: #fff;
     /*background-color: #f5f5f5;*/
     margin: 3px 0 0 0;
     overflow: hidden;
@@ -265,18 +267,25 @@
     height: 35px;
     line-height: 35px;
 }
+.article-action ul {
+    overflow: hidden;
+    /*width: 60%;*/
+    /*float: right;*/
+}
 .article-action ul li {
     list-style: none;
     float: left;
     color: #525558;
+    width: 20%;
+    border-left: 1px dotted #dedede;
+    text-align: center;
 }
 .article-action ul li span:hover {
     color: #34bf49;
     cursor: pointer;
 }
 .article-action ul li span {
-    padding: 0 30px;
-    border-left: 1px dotted #dedede;
+    margin: 0 auto;
 }
 .article-action ul li:first-child span{
     border: none;
@@ -360,7 +369,7 @@
     border: 1px solid #dedede;
     border-radius: 4px;
     background-color: white;
-    height: 32px;
+    height: 33px;
     width: 93%;
     color: #b2b4b4;
     padding: 5px ;
@@ -417,17 +426,12 @@
 }
 
 /*文章*/
-.content-all {
-    background-color: #eee;
-    height: 1000px;
-}
 .content-list {
     width: 100%;
     max-width: 1270.37px;
-    padding-top: 15px;
+    /*padding-top: 15px;*/
     margin: 0 auto;
 }
-
 
 .rz-item {
     /*padding: 12px 13px 12px 13px;*/
@@ -476,7 +480,7 @@
 }
 
 .rz-footer {
-    padding: 5px 13px 20px 50px;
+    padding: 5px 13px 25px 50px;
 }
 .rz-footer ul li {
     float: left;
