--- a/public/css/index.css
+++ b/public/css/index.css
@@ -319,7 +319,7 @@
     float: left;
 }
 .comment-item {
-    float: left;
+    /*float: left;*/
     margin-bottom: 5px;
 }
 .comment-item img {
@@ -599,4 +599,10 @@
 }
 .see-title ul li:nth-child(3) a {
     color: #295c9d;
+}
+
+
+/*layer*/
+.layui-layer-loading0 {
+    margin: 0 auto;
 }
