--- a/public/css/article.css
+++ b/public/css/article.css
@@ -3,7 +3,7 @@
     background-color: #eeeeee;
     min-width: 1366px;
     margin-top: 50px;
-    height: 1000px;
+    min-height: 622px;
 }
 
 .content {
@@ -126,3 +126,7 @@
     margin: 0;
 }
 
+/*layer*/
+.layui-layer-loading0 {
+    margin: 0 auto;
+}
