--- a/public/css/home.css
+++ b/public/css/home.css
@@ -95,6 +95,7 @@
     border-radius: 4px;
     box-shadow: 0 1px 1px 0 rgba(0,0,0,.1);
     background-color: white;
+    margin-left: 10%;
     /*margin-bottom: 15px;*/
 }
 .rz-head {
@@ -157,4 +158,418 @@
 .rz-footer ul li:last-child a:hover {
     color: #34bf49;
 }
+
+
+
+/*****************************************************/
+
+.article {
+    /*padding: 12px 13px 12px 13px;*/
+    border-radius: 4px;
+    box-shadow: 0 1px 1px 0 rgba(0,0,0,.1);
+    background-color: white;
+    margin-bottom: 18px;
+    width: 60%;
+    margin-left: 10%;
+}
+.article-head {
+    padding: 12px 13px 12px 13px;
+}
+.article-head img {
+    height: 50px;
+    width: 50px;
+    float: left;
+    border-radius: 4px;
+}
+.article-head-name {
+    float: left;
+    list-style: none;
+    margin-left: 15px;
+}
+.article-head-name li {
+    height: 25px;
+    line-height: 25px;
+}
+.article-head-name li:last-child {
+    color: #b2b2b2;
+}
+
+.content-all {
+    margin-bottom: 18px;
+}
+.article-content {
+    clear: both;
+    margin-left: 50px;
+    font-size: 15px;
+    color: #777;
+    padding: 12px 13px 12px 13px;
+}
+
+.article-content-image {
+    margin-top: 5px;
+}
+
+.article-content-image img {
+    margin-top: 3px;
+}
+
+
+.article-footer {
+    border-top: 1px solid #e9e9e9;
+    background-color: #fff;
+    /*background-color: #f5f5f5;*/
+    margin: 3px 0 0 0;
+    overflow: hidden;
+    border-radius:0 0 4px 4px;
+    box-shadow: 0 1px 1px 0 rgba(0,0,0,.1);
+    padding-bottom: 5px;
+}
+
+.article-action {
+    height: 35px;
+    line-height: 35px;
+}
+.article-action ul {
+    overflow: hidden;
+    /*width: 60%;*/
+    /*float: right;*/
+}
+.article-action ul li {
+    list-style: none;
+    float: left;
+    color: #525558;
+    width: 20%;
+    border-left: 1px dotted #dedede;
+    text-align: center;
+}
+.article-action ul li span:hover {
+    color: #34bf49;
+    cursor: pointer;
+}
+.article-action ul li span {
+    margin: 0 auto;
+}
+.article-action ul li:first-child span{
+    border: none;
+}
+
+
+.article-zan-icon {
+    /*height: 35px;*/
+    margin: 0 10px 5px;
+}
+.article-zan-icon img {
+    height: 33px;
+    width: 33px;
+    border-radius: 4px;
+    margin: 5px 1px 1px 1px;
+}
+.zan-icon {
+    display: block;
+    height: 33px;width: 33px;
+    float: left;
+    margin-right:4px;
+    border: 1px solid #dedede;
+    border-radius: 4px;
+    line-height: 33px;
+    text-align: center;
+    margin-top: 5px;
+}
+
+.comment {
+    padding: 5px 15px 5px 10px;
+    float: left;
+}
+.comment-item {
+    /*float: left;*/
+    margin-bottom: 5px;
+}
+.comment-item img {
+    height: 33px;
+    width: 33px;
+    border-radius: 4px;
+    float: left;
+    margin-left: 1px;
+}
+.comment-content ul {
+    margin-left: 40px;
+    margin-bottom: 1px;
+}
+.comment-item ul li{
+    color: #b2b2b2;
+    font-size: 12px;
+    margin-left: 10px;
+    list-style: none;
+}
+.comment-item ul li:last-child {
+    color: #777;
+    font-size: 14px;
+}
+
+.comment-item ul li span {
+    float: right;
+    display: none;
+    cursor: pointer;
+}
+.comment-item ul li span:hover {
+    color: #34bf49;
+}
+
+.comment-input {
+    clear: both;
+    margin: 5px 0 10px 10px;
+}
+.comment-input img {
+    height: 33px;
+    width: 33px;
+    border-radius: 4px;
+    float: left;
+    margin-left: 1px;
+}
+.input-show {
+    display: block;
+    border: 1px solid #dedede;
+    border-radius: 4px;
+    background-color: white;
+    height: 33px;
+    width: 93%;
+    color: #b2b4b4;
+    padding: 5px ;
+    float: left;
+    margin-left: 10px;
+}
+.input-show:hover {
+    cursor: text;
+}
+
+.comment-input-detial {
+    float: left;
+    width: 93%;
+    margin-left: 10px;
+}
+
+.write {
+    border: 1px solid #dedede;
+    width: 100%;
+    height: 100px;
+    resize: none;
+    padding: 10px;
+    border-radius: 4px;
+}
+
+.f-bottom{
+    /*width: 97%;*/
+    margin-top: 3px;
+    overflow: hidden;
+}
+.submit {
+    text-decoration: none;
+    float: right;
+    background-color: #eee;
+    color: #999;
+    display: block;
+    width: 100px;
+    height: 33px;
+    line-height: 33px;
+    text-align: center;
+    border-radius: 4px;
+    border: 1px solid #dedede;
+
+}
+.after-cancel {
+    margin-right: 30px;
+    background-color: #fff;
+    cursor: pointer;
+}
+.after-cancel:hover {
+    background-color: red;
+    cursor: pointer;
+    color: #fff;
+}
+
+
+/*****************************************************/
+
+.setting-main {
+    width: 100%;
+    background-color: white;
+    border-radius: 4px;
+    box-shadow: 0 1px 1px 0 rgba(0,0,0,.1);
+    padding-bottom: 20px;
+    overflow: hidden;
+}
+
+.setting-main-head {
+    padding: 1px 0 10px 10px;
+}
+.setting-main-head h2 {
+    font-size: 18px;
+    color: #444;
+    margin-top: 10px;
+}
+.setting-main-head h3 {
+    font-size: 14px;
+    color: #b9c1c7;
+    margin-top: 5px;
+}
+
+.setting-main-content {
+
+}
+.setting-main-content table {
+    margin: 0 auto;
+}
+.setting-main-content table tr td{
+    padding-top: 30px;
+}
+.setting-main-content table tr td:first-child {
+    text-align: right;
+    color: #6d6c6d;
+    padding-right: 50px;
+}
+.setting-mian-input {
+    display: block;
+    width: 240px;
+    border: 1px solid #dce0e3;
+    border-radius: 3px;
+    padding: 0 5px;
+    height: 30px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.setting-main-sex-name {
+    padding-right: 30px;
+    color: #6d6c6d;
+}
+.setting-main .save-change {
+    float: right;
+    margin-top: 25px;
+    margin-right: 10px;
+    margin-bottom: 5px;
+}
+.setting-main .save-change a{
+    display: inline-block;
+    border-radius: 2px;
+    box-shadow: none;
+    font-size: 12px;
+    padding: 3px 10px 4px;
+    margin-right: 30px;
+    color: #fff;
+    background-color: #34bf49;
+}
+.setting-main .save-change a:hover
+{
+    background-color: #41cb56;
+}
+
+.setting-main-item {
+    margin-top: 20px;
+}
+.setting-main-item .label{
+    width: 200px;
+    float: left;
+    padding-top: 5px;
+    text-align: right;
+    font-size: 13px;
+    line-height: 18px;
+    color: #6d6c6d;
+}
+.setting-main-item .control{
+    margin-left: 250px;
+}
+.setting-main-item .control aside{
+    font-size: 12px;
+    color: #b9c1c7;
+    padding: 4px 38px 0 1px;
+}
+.setting-main-item .control aside span{
+    color: #0099e5;
+}
+.setting-main-item .control .line{
+    color: #f60;
+    display: inline-block;
+    line-height: 24px;
+}
+.setting-main-item .control .remail{
+    display: inline-block;
+    font-size: 12px;
+    border-radius: 2px;
+    box-shadow: none;
+    padding: 2px 6px;
+    margin-left: 5px;
+}
+.setting-main-item .control .btn{
+    color: #fff;
+    background-color: #34bf49;
+    box-shadow: 0 1px 1px rgba(0,0,0,.2);
+    -webkit-transition: all .15s ease-in-out;
+    -moz-transition: all .15s ease-in-out;
+    transition: all .15s ease-in-out;
+    border-radius: 4px;
+    text-align: center;
+    letter-spacing: 1px;
+    cursor: pointer;
+}
+.setting-main-item .control li{
+    list-style-type: disc;
+    margin-left: 10px;
+    padding-left: 3px;
+    margin-top: 3px;
+}
+.setting-main-content .line {
+    border-bottom: 1px solid #f2f2f2;
+    padding-bottom: 40px;
+}
+.setting-main-item .desc {
+    padding-left: 30px;
+    float: left;
+}
+.setting-main-item .com_checkbox {
+    float: right;
+    margin: 2px 30px 0 0;
+}
+.setting-main-item .com_checkbox .hidden{
+    display: none;
+}
+.setting-main-item .com_checkbox .cbx{
+    outline: 0;
+    border: 0;
+    margin: 0;
+    padding: 0;
+    font-family: inherit;
+}
+.setting-main-item .com_checkbox .cbx:checked ~ label{
+    background: #34bf49;
+}
+.setting-main-item .com_checkbox .cbx:checked ~ label after{
+    left: 16px;
+}
+.setting-main-item .com_checkbox .lbl{
+    width: 35px;
+    height: 20px;
+    background: #ccc;
+    cursor: pointer;
+    position: relative;
+    -webkit-transition: all .3s ease;
+    -moz-transition: all .3s ease;
+    transition: all .3s ease;
+    display: block;
+    border-radius: 100px;
+}
+.setting-main-item .com_checkbox .lbl after{
+    width: 18px;
+    height: 18px;
+    background: #fff;
+    box-shadow: 0 1px 1px rgba(0,0,0,.1);
+    position: absolute;
+    left: 1px;
+    top: 1px;
+    -webkit-transition: all .3s ease;
+    -moz-transition: all .3s ease;
+    transition: all .3s ease;
+    display: block;
+    border-radius: 100px;
+}
+
 
