--- a/public/css/index.css
+++ b/public/css/index.css
@@ -266,6 +266,7 @@
 .article-action {
     height: 35px;
     line-height: 35px;
+    border-bottom:1px solid #dedede;
 }
 .article-action ul {
     overflow: hidden;
@@ -294,7 +295,7 @@
 
 .article-zan-icon {
     /*height: 35px;*/
-    margin: 0 10px 5px;
+    margin: 3px 10px 0;
 }
 .article-zan-icon img {
     height: 33px;
@@ -401,6 +402,14 @@
     margin-top: 3px;
     overflow: hidden;
 }
+.cancle-write {
+    font-size: 12px;
+    color:#dedede;
+    cursor: pointer
+}
+.cancle-write:hover {
+    color : red;
+}
 .submit {
     text-decoration: none;
     float: right;
@@ -478,6 +487,8 @@
     font-size: 15px;
     color: #777;
     padding: 12px 13px 5px 13px;
+    height: 130px;
+    overflow: hidden;
 }
 
 .rz-footer {
@@ -583,15 +594,17 @@
 .see-title ul li {
     list-style: none;
     float: left;
-    padding-right: 25px;
+    /*padding-right: 25px;*/
+    text-align: center;
+    width: 50%;
     border-right: 1px dotted #999;
 }
 .see-title ul li:nth-child(2) {
-    padding-left: 25px;
+    /*padding-left: 25px;*/
 }
-.see-title ul li:nth-child(3) {
-    padding-left: 25px;
-    padding-right: 0;
+.see-title ul li:nth-child(2) {
+    /*padding-left: 25px;*/
+    /*padding-right: 0;*/
     border: none;
 }
 .see-title ul li a {
@@ -599,7 +612,7 @@
     font-size: 13px;
     color: #666;
 }
-.see-title ul li:nth-child(3) a {
+.see-title ul li:nth-child(2) a {
     color: #295c9d;
 }
 
